Refactor `ElectionServiceImpl`: improve `getPresidentialOrElectoralCircle` with `Optional` for null-safe filtering and streamline DTO conversion logic; remove unused fields and outdated logic in `UserRegisterDTO`.